RESOLVED FIXED23029
REGRESSION (r39337): jsfunfuzz generates identical test files
https://bugs.webkit.org/show_bug.cgi?id=23029
Summary REGRESSION (r39337): jsfunfuzz generates identical test files
Oliver Hunt
Reported 2008-12-29 18:02:18 PST
jsfunfuzz uses Math.random() to generate random test resutls. Prior to squirrelfish it generated different results for every test file. Now the files are all identical 12/29/08 5:59 PM Oliver Hunt: The unification of the random number generation in r39337 made random number generation always start with the same seed in JSC. This is non-standard behaviour based on both our old behaviour and that of other browsers. <rdar://problem/6469185>
Attachments
Cameron Zwarich (cpst)
Comment 1 2008-12-29 21:11:49 PST
What's a good fix for this problem?
Oliver Hunt
Comment 2 2008-12-29 21:23:52 PST
Bad Niko, seeding random but then using rand()
Cameron Zwarich (cpst)
Comment 3 2008-12-29 21:39:16 PST
Nikolas Zimmermann
Comment 4 2008-12-30 05:10:52 PST
Ouch, thanks a lot for fixing Cameron :-)
Note You need to log in before you can comment on or make changes to this bug.